--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <section id="about">
     <h2>About Us</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/CPR_training.jpg/800px-CPR_training.jpg" alt="CPR training demo" class="responsive" />
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Fcpr-training&psig=AOvVaw0xXhHqmvlLr34esebKUMnz&ust=1752856774458000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCIDL176qxI4DFQAAAAAdAAAAABAE" alt="CPR training demo" class="responsive" />
     <p>Heartbeat CPR Initiative is a youth-led organization founded by Leena Manadan. We are dedicated to promoting hands-only CPR training for all, especially in underserved and vulnerable populations.</p>
     <div class="stats">
       <h3>Why CPR Matters:</h3>
